// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

generator client {
  provider = "prisma-client-js"
}

generator dbml {
  provider = "prisma-dbml-generator"
  output   = "../docs"
  outputName = "database-schema.dbml"
}

datasource db {
  provider = "postgresql"
}

// Enums
enum UserStatus {
  ACTIVE
  INACTIVE
  SUSPENDED
}

enum RoleType {
  ADMIN
  USER
  MODERATOR
}

// Models
model Role {
  id          String   @id @default(uuid())
  name        RoleType @unique
  description String?
  users       User[]
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt

  @@map("roles")
}

model User {
  id                String     @id @default(uuid())
  email             String     @unique
  password          String
  firstName         String
  lastName          String
  status            UserStatus @default(ACTIVE)
  emailVerified     Boolean    @default(false)
  emailVerifiedAt   DateTime?
  emailVerificationToken String? @unique
  emailVerificationExpires DateTime?
  lastLoginAt       DateTime?
  passwordResetToken String?   @unique
  passwordResetExpires DateTime?
  roleId            String
  role              Role       @relation(fields: [roleId], references: [id])
  refreshTokens     RefreshToken[]
  createdAt         DateTime   @default(now())
  updatedAt         DateTime   @updatedAt

  @@index([email])
  @@index([roleId])
  @@map("users")
}

model RefreshToken {
  id        String   @id @default(uuid())
  token     String   @unique
  userId    String
  user      User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  expiresAt DateTime
  createdAt DateTime @default(now())

  @@index([userId])
  @@index([token])
  @@map("refresh_tokens")
}
